dockerfile add git

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "jsonrpc-dblink",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
-  "author": "",
+  "author": "yujuism",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
